--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@stripe/stripe-react-native": "^0.50.3",
+    "@stripe/stripe-react-native": "0.50.3",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "expo": "~54.0.13",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.9",
     "expo-linking": "~8.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.12",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
@@ -24,14 +27,18 @@
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-qrcode-svg": "^6.3.15",
+    "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
-    "tailwindcss": "^4.1.14"
+    "react-native-worklets": "^0.6.1",
+    "react-native-worklets-core": "^1.3.3",
+    "tailwindcss": "~3.3.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "babel-preset-expo": "^54.0.4",
     "typescript": "~5.9.2"
   },
   "private": true
