Add npm audit scripts to package.json for improved security management

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "audit": "npm audit --audit-level=moderate",
+    "audit:fix": "npm audit fix",
+    "audit:production": "npm audit --audit-level=high --production"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
