Update app configuration and add EAS build settings
- Changed app slug to 'lumbus' and added 'owner' field in app.config.ts for better project identification.
- Updated projectId in app.config.ts for EAS build configuration.
- Introduced eas.json file to define build and submit settings for development, preview, and production environments.
- Updated babel-preset-expo version in package.json for improved compatibility.

--- a/package.json
+++ b/package.json
@@ -41,8 +41,9 @@
     "tailwindcss": "~3.3.0"
   },
   "devDependencies": {
+    "@expo/metro-config": "~54.0.7",
     "@types/react": "~19.1.0",
-    "babel-preset-expo": "^54.0.4",
+    "babel-preset-expo": "~54.0.5",
     "typescript": "~5.9.2"
   },
   "private": true
