--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@ yarn-error.*
 .env
 .env*.local
 
+# Sensitive files - never commit
+google-services.json
+setup-eas-secrets.sh
+
 # typescript
 *.tsbuildinfo
 
