Update app configuration and enhance build settings
- Changed app name to 'Lumbus - eSIM Data Plans' and added a description for better clarity.
- Updated EAS build settings in eas.json to include service account key path for Android.
- Added google-play-service-account.json to .gitignore to prevent accidental commits of sensitive information.
- Updated package dependencies for expo and expo-router to the latest versions for improved compatibility.
- Added expo-font to package.json for better font management.

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ yarn-error.*
 # Sensitive files - never commit
 google-services.json
 setup-eas-secrets.sh
+google-play-service-account.json
 
 # typescript
 *.tsbuildinfo
