--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@stripe/stripe-react-native": "0.50.3",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
-    "expo": "~54.0.13",
+    "expo": "~54.0.16",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-device": "~8.0.9",
+    "expo-font": "~14.0.9",
     "expo-linking": "~8.0.8",
     "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.12",
+    "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
@@ -36,12 +37,11 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-worklets": "^0.6.1",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.3.3",
     "tailwindcss": "~3.3.0"
   },
   "devDependencies": {
-    "@expo/metro-config": "~54.0.7",
     "@types/react": "~19.1.0",
     "babel-preset-expo": "~54.0.5",
     "typescript": "~5.9.2"
