Enhance payment processing and add IAP support
- Updated PlanDetail and TopUpScreen components to utilize a new PaymentService for handling purchases, streamlining the payment process for both plans and top-ups.
- Removed direct Stripe integration in favor of a unified payment service that supports Apple In-App Purchases (IAP) for iOS.
- Introduced new API functions for IAP checkout and receipt validation to facilitate seamless in-app purchase transactions.
- Enhanced user feedback during payment processing with clearer alerts for success and failure scenarios.
- Updated environment variables in .env.example to include necessary configurations for backend IAP support.
- Added new dependencies for expo-store-review and react-native-iap to package.json for improved payment functionality.

--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,14 @@ EXPO_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_your-stripe-publishable-key-here
 # API Configuration
 EXPO_PUBLIC_API_URL=https://your-api-domain.com/api
 
+# ⚠️ Backend Environment Variables (NOT FOR MOBILE APP)
+# The following environment variables are required in your BACKEND .env file:
+#
+# APPLE_IAP_SHARED_SECRET=your-app-specific-shared-secret-here
+# Get from: App Store Connect → Your App → General → App Information → App-Specific Shared Secret
+# This is used for server-side Apple receipt validation
+# Required for iOS in-app purchases to work
+
 # EAS Project ID (optional, only needed for EAS builds)
 # EAS_PROJECT_ID=your-eas-project-id-here
 
