--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "expo-secure-store": "~15.0.7",
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
+    "expo-store-review": "~9.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-iap": "^14.4.28",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
