--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-status-bar": "~3.0.8",
     "expo-store-review": "~9.0.8",
     "nativewind": "^4.2.1",
+    "nitro-modules": "^0.1.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-iap": "^14.4.28",
