--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "audit:production": "npm audit --audit-level=high --production"
   },
   "dependencies": {
-    "@expo/vector-icons": "^15.0.2",
+    "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@stripe/stripe-react-native": "0.50.3",
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
-    "expo": "~54.0.16",
+    "expo": "54.0.19",
     "expo-clipboard": "~8.0.7",
-    "expo-constants": "~18.0.9",
+    "expo-constants": "^18.0.10",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-linking": "~8.0.8",
@@ -30,10 +30,10 @@
     "expo-status-bar": "~3.0.8",
     "expo-store-review": "~9.0.8",
     "nativewind": "^4.2.1",
-    "nitro-modules": "^0.1.1",
     "react": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-iap": "^14.4.28",
+    "react-native-nitro-modules": "^0.31.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
