--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "expo": "54.0.19",
+    "expo-build-properties": "^1.0.9",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "^18.0.10",
     "expo-device": "~8.0.9",
@@ -32,7 +33,8 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-iap": "^12.16.4",
+    "react-native-iap": "^14.4.31",
+    "react-native-nitro-modules": "^0.31.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
