--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "expo": "54.0.19",
+    "expo-build-properties": "^1.0.9",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "^18.0.10",
     "expo-device": "~8.0.9",
