--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-iap": "^12.15.0",
+    "react-native-iap": "^14.4.31",
+    "react-native-nitro-modules": "^0.31.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^4.1.3",
     "react-native-safe-area-context": "~5.6.0",
