Enhance iOS build process by integrating RCT-Folly fix into the Expo config plugin. Added a new script in package.json for post-install tasks and improved the Podfile modification logic to ensure compatibility with newer iOS SDKs. This streamlines the build process and addresses typedef redefinition issues.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web",
     "audit": "npm audit --audit-level=moderate",
     "audit:fix": "npm audit fix",
-    "audit:production": "npm audit --audit-level=high --production"
+    "audit:production": "npm audit --audit-level=high --production",
+    "eas-build-post-install": "node scripts/eas-build-post-install.js"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
