--- a/eas.json
+++ b/eas.json
@@ -22,7 +22,8 @@
         "EXPO_NO_CAPABILITY_SYNC": "1"
       },
       "ios": {
-        "simulator": false
+        "simulator": false,
+        "resourceClass": "m1-medium"
       }
     },
     "production": {
