--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.90.5",
     "expo": "54.0.19",
+    "expo-apple-authentication": "~8.0.7",
+    "expo-auth-session": "~7.0.8",
     "expo-build-properties": "^1.0.9",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "^18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-linking": "~8.0.8",
@@ -31,6 +34,7 @@
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-store-review": "~9.0.8",
+    "expo-web-browser": "~15.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
