--- a/package.json
+++ b/package.json
@@ -38,15 +38,13 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.5",
-    "react-native-iap": "^14.4.35",
-    "react-native-nitro-modules": "^0.31.3",
+    "react-native-iap": "13.0.4",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.10.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^3.0.0",
-    "react-native-worklets": "0.5.1",
     "tailwindcss": "~3.3.0"
   },
   "devDependencies": {
