Add cache clearing option in eas.json for all environments
- Introduced a cache configuration with clear set to true for development, preview, and production environments in eas.json.
- This change ensures that the cache is cleared during builds, improving the reliability of the application across different stages.

These updates enhance the build process by ensuring a clean state for each environment.

--- a/eas.json
+++ b/eas.json
@@ -8,6 +8,9 @@
       "developmentClient": true,
       "distribution": "internal",
       "environment": "development",
+      "cache": {
+        "clear": true
+      },
       "env": {
         "GOOGLE_SERVICES_JSON": "@GOOGLE_SERVICES_JSON",
         "EXPO_NO_CAPABILITY_SYNC": "1"
@@ -19,6 +22,9 @@
     "preview": {
       "distribution": "internal",
       "environment": "preview",
+      "cache": {
+        "clear": true
+      },
       "env": {
         "GOOGLE_SERVICES_JSON": "@GOOGLE_SERVICES_JSON",
         "EXPO_NO_CAPABILITY_SYNC": "1"
@@ -31,6 +37,9 @@
     "production": {
       "autoIncrement": true,
       "environment": "production",
+      "cache": {
+        "clear": true
+      },
       "env": {
         "GOOGLE_SERVICES_JSON": "@GOOGLE_SERVICES_JSON",
         "EXPO_NO_CAPABILITY_SYNC": "1"
