--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   "devDependencies": {
     "@types/react": "~19.1.0",
     "babel-preset-expo": "~54.0.5",
+    "react-native-worklets": "^0.5.1",
     "typescript": "~5.9.2"
   },
   "private": true
