--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-sharing": "~14.0.7",
     "expo-status-bar": "~3.0.8",
     "expo-store-review": "~9.0.8",
+    "expo-task-manager": "^14.0.8",
     "expo-web-browser": "~15.0.8",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
