--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
     "react-native-worklets": "^0.5.1",
     "typescript": "~5.9.2"
   },
+  "overrides": {
+    "js-yaml": "^4.1.0"
+  },
   "private": true
 }
