--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lumbus-mobile",
-  "version": "1.0.12",
+  "version": "1.0.14",
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
@@ -37,8 +37,9 @@
     "expo-task-manager": "^14.0.8",
     "expo-web-browser": "~15.0.8",
     "nativewind": "^4.2.1",
-    "react": "19.1.0",
-    "react-native": "0.81.5",
+    "react": "18.3.1",
+    "react-native": "0.75.4",
+    "react-native-android-widget": "^0.17.2",
     "react-native-iap": "13.0.4",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "^3.10.1",
@@ -49,7 +50,7 @@
     "tailwindcss": "~3.3.0"
   },
   "devDependencies": {
-    "@types/react": "~19.1.0",
+    "@types/react": "~18.3.3",
     "babel-preset-expo": "~54.0.5",
     "react-native-worklets": "^0.5.1",
     "typescript": "~5.9.2"
