Update app configuration to version 1.0.17 and increment build number to 20; enhance marketing asset management and referral code validation
- Updated app version and build number to reflect recent changes.
- Added marketing asset paths to .gitignore for better management of generated files.
- Implemented referral code validation in the Signup component, improving user experience during account creation.
- Enhanced the Dashboard component to fetch live usage data for eSIMs, providing real-time insights into data consumption.
- Improved sorting logic in the Browse component to prioritize popular regions, enhancing user navigation.

These changes collectively enhance the app's functionality and user experience, particularly in eSIM management and marketing asset handling.

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,13 @@ scripts/AuthKey_*.p8
 # generated native folders
 /ios
 /android
+
+# Marketing generated assets (can be regenerated with npm run marketing:*)
+marketing/output/
+marketing/scripts/output/
+marketing/v2/output/
+marketing/v3/output/
+marketing/v4/output/
+marketing/v5/output/
+marketing/v6/output/
+marketing/v7/output/
