--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@stripe/stripe-react-native": "0.50.3",
     "@supabase/supabase-js": "^2.75.1",
+    "@tanstack/query-async-storage-persister": "^5.90.14",
     "@tanstack/react-query": "^5.90.5",
+    "@tanstack/react-query-persist-client": "^5.90.14",
     "expo": "54.0.19",
     "expo-apple-authentication": "~8.0.7",
     "expo-auth-session": "~7.0.8",
@@ -35,7 +37,9 @@
     "expo-crypto": "~15.0.7",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
+    "expo-intent-launcher": "~13.0.8",
     "expo-linking": "~8.0.8",
+    "expo-network": "~8.0.8",
     "expo-notifications": "~0.32.12",
     "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.7",
