--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@tanstack/react-query-persist-client": "^5.90.14",
     "expo": "54.0.19",
     "expo-apple-authentication": "~8.0.7",
+    "expo-application": "~7.0.8",
     "expo-auth-session": "~7.0.8",
     "expo-build-properties": "^1.0.9",
     "expo-clipboard": "~8.0.7",
